création du header

--- a/Projet_Pizzeria/src/app/components/header/header.component.html
+++ b/Projet_Pizzeria/src/app/components/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header class="flex">
+<h1>Pizzeria Della Mamma</h1>
+
+<div class="flex buthead">
+
+<a class="butable" href="#">Table 42 </a> 
+
+
+<a class="flex butcart" href="#"> <img src="assets/icons/cart_shopping.png" alt=""> 0 </a>
+
+</div>
+
+</header>
