composant product-details design

--- a/Projet_Pizzeria/src/app/components/product-detail/product-detail.component.html
+++ b/Projet_Pizzeria/src/app/components/product-detail/product-detail.component.html
@@ -1,1 +1,25 @@
-<p>product-detail works!</p>
+<div id="product" class="flex">
+    <img src="assets/images/pizzas/pizza-chicken.png" alt="pizza">
+    <div id="product-infos" class="flex column">
+        <div id="product-description" class="flex column">
+            <h2>Nom du produit</h2>
+            <p class="price">7,00 €</p>
+            <p class="description">Description du produit</p>
+        </div>
+        <div id="ingredients" class="flex column">
+            <h3>Ingrédient inclus</h3>
+            <form action="" class="flex column">
+                <div class="flex ingredient-name">
+                    <label for="">Nom ingrédient</label>
+                    <input type="radio">
+                </div>
+                <hr>
+                <div class="flex ingredient-name">
+                    <label for="">Nom ingrédient</label>
+                    <input type="radio">
+                </div>
+                <hr>
+            </form>
+        </div>
+    </div>
+</div>
