--- a/Projet_Pizzeria/src/app/app.component.html
+++ b/Projet_Pizzeria/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <main>
     <router-outlet></router-outlet>
+    <app-product-detail></app-product-detail>
 </main>
 <app-footer></app-footer>
