component extra-card (html et css)

--- a/Projet_Pizzeria/src/app/components/extra-card/extra-card.component.html
+++ b/Projet_Pizzeria/src/app/components/extra-card/extra-card.component.html
@@ -1,1 +1,11 @@
-<p>extra-card works!</p>
+<div id="extra-card" class="flex">
+    <div id="name-price" class="flex column">
+        <p id="name">Anchois</p>
+        <p id="price">1,00€</p>
+    </div>
+    <div id="quantity-picker" class="flex">
+        <button class="quantity-btn minus-btn">-</button>
+        <p>0</p>
+        <button class="quantity-btn plus-btn">+</button>
+    </div>
+</div>
