--- a/Projet_Pizzeria/src/app/app.component.html
+++ b/Projet_Pizzeria/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <main>
+    <app-tag-button></app-tag-button>
     <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
