Création component formulaire de la page home

--- a/Projet_Pizzeria/src/app/components/table-form/table-form.component.html
+++ b/Projet_Pizzeria/src/app/components/table-form/table-form.component.html
@@ -1,1 +1,11 @@
-<p>table-form works!</p>
+
+<main class="flex column">
+<h1>Benvenuto !</h1>
+<p>Veuillez renseigner votre numéro de table</p>
+
+<div class="flex table">
+<input type="text" placeholder="exemple 42">
+<button> C’est parti !</button>
+</div>
+
+</main>
